# Cryptrader

./: .gitignore  CLAUDE.md  NOTICE.md  README.md  backtest_engine.py  pyproject.toml  requirements.txt  run_backtest.py
Backtest/: README.md  VALIDATED_PARAMETERS.md  backtest.py  bollinger_strategy.py  donchian_grid_search.py  donchian_strategy.py  grid_search.py  macd_strategy.py  multi_asset.py  requirements.txt  stochastic_grid_search.py  stochastic_strategy.py  trend_strategy.py
Data/: README.md
References/KrakenTradingKit/: README.md
References/LiveTradingBots/: .env.example  .gitignore  README.md  bot.py  install.sh  requirements.txt
Strategies/RsiMeanReversion/: config.yaml  strategy.py
ai_assistant/: README.md  __main__.py  ai_assistant_flow.excalidraw  claude.py  config.py  outlook.py  run_assistant.py  tools.py
bots/: daily_active_trader.toml  daily_active_trader_secrets_example.toml
common/: discord_notifier.py  logging_setup.py  secrets.py
kraken_kit/: futures_client.py  futures_connector.py
notebooks/: btc_usdc.csv
strategies/: __init__.py  simple_ai_directional_outlook.py
